# barbarossa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  errors.txt
docs/: controlchannel.md  message_handling.md
include/: controlchannel.hpp  protocol.hpp  websocket.hpp  zmqutils.hpp
include/barbarossa/: control_channel.hpp  errors.hpp  globals.hpp  json_message.hpp  message.hpp  message.ipp  message_handler.hpp  message_type.hpp  message_type.ipp  protocol.hpp  protocol_details.hpp  session.hpp  session.ipp  session_state.hpp  session_state.ipp  transport.hpp  transport.ipp  transport_handler.hpp  websocket.hpp  websocket_endpoint.hpp  websocket_transport.hpp  websocket_transport.ipp  zmq_utils.hpp
spikes/statemachine/: main.cpp  statemachine
src/: control_channel.cpp  controlchannel.cpp  controlchannel.hpp  globals.cpp  hello.cpp  main.cpp  websocket.hpp  websocket_endpoint.cpp
